src/Game.css
.Game-container {
  position: absolute;
  top: 0;
  height: 100%;
  width: 100%;
}

.Game-active {
  height: 100%;
  position: fixed;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  z-index: 1;
}

.Game-controls {
  position: fixed;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 36px;
  z-index: 0;
  background: rgba(256, 256, 256, 0.7);
}

.Game-instructions {
  margin-bottom: 12px;
  font-weight: 600;
}

.Game-instructions-2 {
  margin-top: 12px;
  font-size: 18px;
}

.Game-over {
  font-weight: 900;
}

.Game-final-points {
  margin-bottom: 12px;
}

.Game-points {
  position: absolute;
  top: 18px;
  right: 18px;
  color: white;
  font-weight: 100;
}

.Game-start {
  cursor: pointer;
  font-family: inherit;
  padding: 12px 16px;
  cursor: pointer;
  display: inline-block;
  margin: 0;
  position: relative;
  text-align: center;
  text-decoration: none;
  border-width: 1;
  border-style: solid;
  width: auto;

  background: #f0006f;
  border: 4px solid #f0006f;
  color: white;
  border-radius: 8px;

  font-variant: small-caps;
  font-size: 24px;
  letter-spacing: 2px;
}

.Game-start:disabled {
  opacity: 0.5;
  cursor: not-allowed;
  opacity: 0.3;
}

.Game-start:active {
  background: #c00058;
  border-color: #c00058;
}

.Game-start:hover {
  background: #c00058;
  border-color: #c00058;
}

